[gd_scene load_steps=4 format=2]

[ext_resource path="res://Styling/Fonts/Titles.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Styling/Themes/standardTheme.tres" type="Theme" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
show_behind_parent = true
margin_top = -1.05264
margin_right = 1024.0
margin_bottom = 598.947
theme = ExtResource( 3 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newGameBtn" type="Button" parent="."]
margin_left = 312.0
margin_top = 140.0
margin_right = 712.0
margin_bottom = 175.0
theme = ExtResource( 3 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadGameBtn" type="Button" parent="."]
margin_left = 312.0
margin_top = 215.0
margin_right = 712.0
margin_bottom = 250.0
theme = ExtResource( 3 )
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settingsBtn" type="Button" parent="."]
margin_left = 312.0
margin_top = 290.0
margin_right = 712.0
margin_bottom = 325.0
theme = ExtResource( 3 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exitBtn" type="Button" parent="."]
margin_left = 312.0
margin_top = 365.0
margin_right = 712.0
margin_bottom = 400.0
theme = ExtResource( 3 )
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="."]
margin_left = 312.0
margin_right = 712.0
margin_bottom = 100.0
theme = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0.2, 0.835294, 0.521569, 1 )
bbcode_enabled = true
bbcode_text = "[center]Chicken 3[/center]"
text = "Chicken 3"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="newGameBtn" to="." method="_on_newGameBtn_pressed"]
[connection signal="pressed" from="loadGameBtn" to="." method="_on_loadGameBtn_pressed"]
[connection signal="pressed" from="settingsBtn" to="." method="_on_settingsBtn_pressed"]
[connection signal="pressed" from="exitBtn" to="." method="_on_exitBtn_pressed"]
